--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@
          required: true 
          default: 'warning' 
    push: 
-     branches: [ "main" ] 
+     branches: [ "master" ] 
    pull_request: 
-     branches: [ "main" ] 
+     branches: [ "master" ] 
   
  jobs: 
    build: 
